# CodeFix-Agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  项目完整总结.md
.github/workflows/: ci.yml
data/benchmarks/: download_quixbugs.py  quixbugs_data.py
deploy/: DEPLOY.md  nginx.conf
docs/interview/: AI_上下文文档.md  OpenClaw架构与设计规则.md  Python速查.md  WXG二面.md  cursor_chat_record5.15.md  中联创新一面.md  字节飞书aiagent二面.md  开发记录_2026-05-15.md  模拟面试问答.md  百度AIagent开发.md  百度一面.md  腾讯wxg一面.md  豆包5.15聊天规划.md  阿里AI全栈电话面.md  阿里岗位JD.md  阿里面试速查.md  面试准备文档_20小时冲刺版.md  面试题汇总.md  项目描述-重写.md
docs/notes/: A100 部署指南.md  AI_项目上下文_给下一个AI.md  CHANGELOG.md  CHANGE_LOG.md  DECENTMEM_面试话术.md  Docker_速查_面试高频.md  Linux_指令速查_面试高频.md  Python_数据结构_面试标准答案.md  README_WBT333.md  REPOBUGFIX_AGENT_RECORD.md  cursor_.md  上下文压缩总结.md  对话总结_精简版.txt  数据集扩充指南.md  服务器交互历史总结.md  服务器代码大模型.txt  服务器部署总结.md  聊天记录精简版_给下一个AI.md  项目完整总结.md  项目文档_给阿里面试官.md  项目状态总结.md  项目维护文档.md
docs/reference/: DPO_vs_GRPO 对比分析.md  GRPO_Bad_Case 分析报告.md  TRL_GRPO 面试速查.md  从0生成代码仓库.md
docs/面试记录/: README.md  面试核心知识库.md
experiments/finetune/: dpo_codefix_train.py  dpo_codefix_train_v2.py  dpo_codefix_train_v3.py  ppo_codefix_train.py
experiments/grpo/: grpo_codefix_train.py  grpo_codefix_train_cot_prm.py  grpo_codefix_train_decentmem.py  grpo_codefix_train_v2.py  grpo_codefix_train_with_critic.py  grpo_train.py
experiments/pretrain/: augment_dataset.py  sft_train.py  (+3 more)
frontend/: index.html
logs/: EXPERIMENT_LOG.md
src/: agent_old.py  agent_successful_old.py  config.py
tests/: test_infrastructure.py
(+269 files in other folders)
